--- a/grid.html
+++ b/grid.html
@@ -137,7 +137,7 @@
 		}
 	</style>
 </head>
-
+//jkjkllhjlhj
 
 <body>
 	<section class="grid">
@@ -167,5 +167,5 @@
 		Les autorisations au-delà du champ de cette licence peuvent être obtenues auprès de <a href="mailto:contact@3wa.fr" rel="cc:morePermissions">contact@3wa.fr</a>. Maquette réalisée par Stephane Pereck.
 	</footer>
 </body>
-
+//Git test test test
 </html>
